--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   flutter_secure_storage: ^6.0.0
   flutter_svg: ^1.1.4
   get_it: ^7.6.0
-  google_fonts: ^3.0.1
-  intl: ^0.17.0
+  google_fonts: ^4.0.4
+  intl: 
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   spring: ^2.0.2
@@ -67,6 +67,7 @@ flutter:
     - assets/icons/home/
     - assets/icons/product/
     - assets/images/
+    - shorebird.yaml
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
